--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,3 +9,8 @@ phases:
       - sudo apt-get update
       - sudo apt-get install terraform  
       - terraform -version
+      - terraform init
+      - terraform validate
+  build:
+    commands:
+      - terraform apply --auto-approve
